Pre-loaded audio

--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
             <kbd class="key U">U</kbd>
         </div>
     </div>
+    <audio src="audio/A.mp3"></audio>
+    <audio src="audio/S.mp3"></audio>
+    <audio src="audio/D.mp3"></audio>
+    <audio src="audio/F.mp3"></audio>
+    <audio src="audio/G.mp3"></audio>
+    <audio src="audio/H.mp3"></audio>
+    <audio src="audio/J.mp3"></audio>
+
+    <audio src="audio/W.mp3"></audio>
+    <audio src="audio/E.mp3"></audio>
+    <audio src="audio/T.mp3"></audio>
+    <audio src="audio/Y.mp3"></audio>
+    <audio src="audio/U.mp3"></audio>
+
     <script src="behavior.js"></script>
 </body>
 </html>
