--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 
 </head>
 <body>
+    <nav>
+        <ol>
+            <li><a href="DrumKit/index-START.html">Drums</a></li>
+        </ol>
+    </nav>
     <div class="container">
         <div class="white-keys">
             <kbd class="key A">A</kbd>
@@ -28,19 +33,19 @@
             <kbd class="key U">U</kbd>
         </div>
     </div>
-    <audio src="audio/A.mp3"></audio>
-    <audio src="audio/S.mp3"></audio>
-    <audio src="audio/D.mp3"></audio>
-    <audio src="audio/F.mp3"></audio>
-    <audio src="audio/G.mp3"></audio>
-    <audio src="audio/H.mp3"></audio>
-    <audio src="audio/J.mp3"></audio>
+    <audio class="record_A" src="audio/A.mp3"></audio>
+    <audio class="record_S" src="audio/S.mp3"></audio>
+    <audio class="record_D" src="audio/D.mp3"></audio>
+    <audio class="record_F" src="audio/F.mp3"></audio>
+    <audio class="record_G" src="audio/G.mp3"></audio>
+    <audio class="record_H" src="audio/H.mp3"></audio>
+    <audio class="record_J" src="audio/J.mp3"></audio>
 
-    <audio src="audio/W.mp3"></audio>
-    <audio src="audio/E.mp3"></audio>
-    <audio src="audio/T.mp3"></audio>
-    <audio src="audio/Y.mp3"></audio>
-    <audio src="audio/U.mp3"></audio>
+    <audio class="record_W" src="audio/W.mp3"></audio>
+    <audio class="record_E" src="audio/E.mp3"></audio>
+    <audio class="record_T" src="audio/T.mp3"></audio>
+    <audio class="record_Y" src="audio/Y.mp3"></audio>
+    <audio class="record_U" src="audio/U.mp3"></audio>
 
     <script src="behavior.js"></script>
 </body>
